--- a/package.json
+++ b/package.json
@@ -3,14 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@vitejs/plugin-react": "^4.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "vite": "^5.0.11",
-    "vite-tsconfig-paths": "^4.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -38,6 +32,10 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18"
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^4.9.5",
+    "vite": "^5.0.11",
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
